tests/baselines/reference/parserStrictMode12(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
parserStrictMode12.ts(2,19): error TS1100: Invalid use of 'eval' in strict mode.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== parserStrictMode12.ts (1 errors) ====
    "use strict";
    var v = { set foo(eval) { } }
                      ~~~~
!!! error TS1100: Invalid use of 'eval' in strict mode.